tests/semantic/fail/function-argument-count-2.tiger
let
      var x : int

      function f(y : int) : int = (
            1
      )
in
      x = f()
end
